manifests/gateway/gatewayclass.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: GATEWAY_CLASS_NAME_PLACEHOLDER
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: GATEWAY_CONFIG_NAME_PLACEHOLDER
    namespace: NAMESPACE_PLACEHOLDER
