manifests/gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: GATEWAY_NAME_PLACEHOLDER
  namespace: NAMESPACE_PLACEHOLDER
spec:
  gatewayClassName: GATEWAY_CLASS_NAME_PLACEHOLDER
  listeners:
    - name: http
      protocol: HTTP
      port: 80
